--- a/public/test.html
+++ b/public/test.html
@@ -10,13 +10,13 @@
 <body>
 	<p style="margin-top:-12px">
 		<em class="link"></em>
-			<!-- <a href="javascript:void(0);"
+		<!-- <a href="javascript:void(0);"
 				onclick="window.open('http:fiy.daum.net/fiy/map/CsGeneral.daum', '_blank', 'width=981, height=650')">
 				혹시 주소 결과가 잘못 나오는 경우에는 여기에 제보해주세요.
 			</a> -->
 		</em>
 	</p>
-	<div id="map" style="width:100%;height:350px;"></div>
+	<div id="map" style="width:100%;height:500px;"></div>
 
 	<script type="text/javascript"
 		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49&libraries=services"></script>
@@ -24,7 +24,7 @@
 		var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
 			mapOption = {
 				center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-				level: 3 // 지도의 확대 레벨
+				level: 10 // 지도의 확대 레벨
 			};
 
 		// 지도를 생성합니다    
@@ -34,29 +34,32 @@
 		var geocoder = new kakao.maps.services.Geocoder();
 
 		// 주소로 좌표를 검색합니다
-		geocoder.addressSearch('구미로100', function (result, status) {
+		var test = ['구미로100', '분당중앙고']
+		for (var i = 0; i <= 1; i++) {
+			geocoder.addressSearch(test[i], function (result, status) {
 
-			// 정상적으로 검색이 완료됐으면 
-			if (status === kakao.maps.services.Status.OK) {
+				// 정상적으로 검색이 완료됐으면 
+				if (status === kakao.maps.services.Status.OK) {
 
-				var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+					var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
 
-				// 결과값으로 받은 위치를 마커로 표시합니다
-				var marker = new kakao.maps.Marker({
-					map: map,
-					position: coords
-				});
+					// 결과값으로 받은 위치를 마커로 표시합니다
+					var marker = new kakao.maps.Marker({
+						map: map,
+						position: coords
+					});
 
-				// 인포윈도우로 장소에 대한 설명을 표시합니다
-				var infowindow = new kakao.maps.InfoWindow({
-					content: '<div style="width:150px;text-align:center;padding:6px 0;">마스크</div>'
-				});
-				infowindow.open(map, marker);
+					// 인포윈도우로 장소에 대한 설명을 표시합니다
+					var infowindow = new kakao.maps.InfoWindow({
+						content: '<div style="width:150px;text-align:center;padding:6px 0;">마스크</div>'
+					});
+					infowindow.open(map, marker);
 
-				// 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
-				map.setCenter(coords);
-			}
-		});    
+					// 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
+					map.setCenter(coords);
+				}
+			});
+		} 
 	</script>
 </body>
 
