--- a/public/index.html
+++ b/public/index.html
@@ -624,7 +624,7 @@
                         })
                       </script>
                       <span class="mr-2">
-                       <i class='fas fa-circle text-warning'></i>확진자: + <p id = "infected_plus"></p>
+                       <i class='fas fa-circle text-warning'></i>확진자: + <a id = "infected_plus"></a>
                       </span>
                       <br></br>
                       <br></br>
