--- a/public/test.html
+++ b/public/test.html
@@ -34,7 +34,7 @@
 		var geocoder = new kakao.maps.services.Geocoder();
 
 		// 주소로 좌표를 검색합니다
-		var test = ['구미로100', '불정로 174']
+		var test = ['구미로100', '운주산로 1208-1']
 		for (var i = 0; i <= 1405; i++) {
 			geocoder.addressSearch(test[i], function (result, status) {
 
