--- a/public/test.html
+++ b/public/test.html
@@ -23,8 +23,8 @@
 	<script>
 		var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
 			mapOption = {
-				center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-				level: 10 // 지도의 확대 레벨
+				center: new kakao.maps.LatLng(37.5665, 126.9780), // 지도의 중심좌표
+				level: 12 // 지도의 확대 레벨
 			};
 
 		// 지도를 생성합니다    
@@ -101,9 +101,9 @@
 					});
 
 					// 인포윈도우로 장소에 대한 설명을 표시합니다
-					var infowindow = new kakao.maps.InfoWindow({
-						content: '<div style="width:150px;text-align:center;padding:6px 0;">마스크</div>'
-					});
+					// var infowindow = new kakao.maps.InfoWindow({
+					// 	content: '<div style="width:150px;text-align:center;padding:6px 0;">마스크</div>'
+					// });
 					infowindow.open(map, marker);
 
 					// 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
