--- a/public/corona_law.html
+++ b/public/corona_law.html
@@ -229,18 +229,21 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-1 text-gray-800">코로나 바이러스란</h1>
-          <img src= /images/corona.jpg width="200" height="200">
           <br></br>
-          <p class="mb-1">코로나 바이러스는 사람이나 동물에서 호흡기 질환을 일으키는 바이러스로 감기를 일으키는 원인 바이러스 중 하나입니다.<br>이 바이러스는 현미경으로 관찰했을 때 코로나
-            모양이라서 붙여진 이름입니다.</br> 2003년 사스(중증 급성 호흡기 증후군)와 2015년 메르스(중동 호흡기 증후군)가 이 코로나 바이러스로 인한 것이었습니다.</p>
-
+          <h1 class= "h3 mb-1 text-gray-800 text-center">코로나 3법</h1>
           <hr class="sidebar-divider d-none d-md-block">
+          <p class="mb-1">
+            코로나바이러스 감염증-19 (코로나19)의 확산에 대응하기 위해 2020년 2월 26일 국회 본회의에서 의결한 1)감염법 예방·관리법, 2)검역법, 3)의료법 개정안을 말한다.
+            <br></br>
+            코로나 3법의 의결로 마스크·손소독제 등 물품의 수출·국외반출을 금지하고 감염취약계층에게 마스크를 우선 지급하고, 코로나19 유행지로부터의 입국을 금지할 수 있는 법적 토대가 마련되게 됐다.
+            <br></br>
+            1)감염법 예방·관리법 개정안 - 마스크·손소독제 등 의약외품등의 수출 또는 국외 반출 금지와 벌칙 규정을 마련하는 한편 노인·어린이 등 감염취약계층에 마스크를 지급할 수 있도록 하였다. 또한 감염병 환자로 의심되는 사람에게 감염병병원체 검사 및 자가격리 등 조치를 할 수 있는 근거를 마련하고, 의료인 등이 환자의 해외여행력 정보를 확인하도록의무를 부과했으며, 역학조사관 인력을 확대하였다.
+            <br></br>
+            2)검역법 개정안 - 감염병 발생 지역으로부터 입국하는 자에 대한 입국금지 요청 근거를 마련하여 입국자가 무증상자나 잠복기에 있더라도 해외로부터의 감염병 유입을 방지 할 수 있게 된다. 또한 ICT 기반을 활용한 검역 실시, 권역별 검역체계 구축 등 검역체계 개선에 대한 내용도 개정안에 포함되었다.
+            <br></br>
+            3)의료법 개정안 - 의료관련감염의 발생과 원인에 대한 의과학적 감시를 위해 보건복지부장관이 의료관련감염 감시 시스템을 구축·운영하도록 하였다. 아울러 의료기관 휴·폐업 시 진료기록부가 안전하게 보관될 수 있도록 진료기록보관시스템도 구축·운영할 수 있게 하였다.
+          </p>  
           <!-- Page body -->
-          <h1 class="h3 mb-1 text-gray-800">코로나 바이러스 주요 증상</h1>
-          <br class="mb-1">코로나-19에 감염되면 2~3일에서 최장 2주 정도 잠복기를 거쳤다가 다양한 증상이 나타납니다.<br>주로 무기력감, 37.5도 이상의 고열, 기침, 인후통, 가래,
-          근육통, 두통, 호흡곤란, 폐렴 등의 증상이 발생합니다.</br>폐 손상에 따른 호흡부전으로 심하면 사망에 이를 수도 있습니다.</p>
-          <!-- Content Row -->
 
         </div>
         <!-- End of Main Content -->
@@ -249,6 +252,8 @@
         <footer class="sticky-footer bg-light">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
+              <br></br>
+              <br></br>
               <br></br>
               <br></br>
               <br></br>
