--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -316,12 +316,10 @@
                                 // GeoLocation을 이용해서 접속 위치를 얻어옵니다
                                 navigator.geolocation.getCurrentPosition(function (position) {
 
-                                    var lat = position.coords.latitude, // 위도
-                                        lon = position.coords.longitude; // 경도
+                                    var lat = position.coords.latitude; // 위도
+                                    var lon = position.coords.longitude; // 경도
 
                                     var locPosition = new kakao.maps.LatLng(lat, lon), // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
-
-
                                 });
 
                             }else{
