--- a/public/mask_post_office.html
+++ b/public/mask_post_office.html
@@ -318,7 +318,7 @@
                                     var lat = position.coords.latitude; // 위도
                                     var lon = position.coords.longitude; // 경도
 
-                                    var locPosition = new kakao.maps.LatLng(lat, lon), // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
+                                    var locPosition = new kakao.maps.LatLng(lat, lon); // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
                                 })
                             }
 
